fixing hover on mobile

--- a/src/components/store-list-card/store-card.style.css
+++ b/src/components/store-list-card/store-card.style.css
@@ -10,12 +10,14 @@
   overflow: hidden;
 }
 
-.home-store-div:hover,
-.home-store-div:active {
-  transform: scale(1.04);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  overflow: auto;
+@media (hover: hover) {
+  /* this media query will only apply on laptops */
+  .home-store-div:hover {
+    transform: scale(1.04);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    overflow: auto;
+  }
 }
 
 .poster-image {
